--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -17,7 +17,7 @@
 
 	<div *ngIf="vDayShow" >
 		<div class="item-container-ta" id="ta-container" >
-			<div class="item-title-ta" *ngFor="#each of getProdCat()" [value]="each.category_name" >{{each.category_name}}</div>
+			<div class="item-title-ta" >Airtime</div>
 				<div class="item-left">SIM</div>
 				<div class="item-mid">23.33%</div>
 				<div class="item-right">
