--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,7 +1,7 @@
 <div class="accounts-receivables">	
 	<div class="filter-container" *ngIf="getFilter().filterAccReceivables">
 		<div class="filter-input input">	
-			<input #box (keyup)="onKey(box.value)" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN"/>
+			<input type="search" [(ngModel)]="FilteredSearch" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN" aria-label="filter FilteredSearch" [value]="results"/>
 		</div>	
 	</div>
 
@@ -14,25 +14,26 @@
 	    </div>
 	</div>
 
-	<div ng-app="accounts-receivables" ng-controller="Retailers">
-		<div ng-repeat="list in retailers">
-			<div id="accList" ng-init="init(list.retailerName)">
-				<div class="item-container">
-				    <div class="container">
-				        <div class='cell'>
-			                <div class='container'><div class='cell left grey'># Route {{list.routeID}}</div></div>
-			                <div class='container'><div class='cell left'>{{list.retailerName}}</div></div>
-			                <div class='container'><div class='cell left italic'>{{list.retailerID}}</div></div>
-				        </div>
-				        <div class='cell'>
-			                <div class='container'><div class='cell right'></div></div>
-			                <div class='container'><div class='cell right'>{{list.accReceivables}} ₱</div></div>
-			                <div class='container'><div class='cell right'></div></div>
-				        </div>
-				            <div class='cell icon'></div>
-				    </div>
-				</div>
+	<ul class="animate-container">
+		<li class="animate-repeat" *ngFor="#FilteredSearch of vAllRetailerList | filter:FilteredSearch">
+			<div class="item-container">
+			    <div class="container">
+			        <div class='cell'>
+		                <div class='container'><div class='cell left grey'># Route {{FilteredSearch.routeID}}</div></div>
+		                <div class='container'><div class='cell left'>{{FilteredSearch.retailerName}}</div></div>
+		                <div class='container'><div class='cell left italic'>{{FilteredSearch.retailerID}}</div></div>
+			        </div>
+			        <div class='cell'>
+		                <div class='container'><div class='cell right'></div></div>
+		                <div class='container'><div class='cell right'>{{FilteredSearch.accReceivables}} ₱</div></div>
+		                <div class='container'><div class='cell right'></div></div>
+			        </div>
+			            <div class='cell icon'></div>
+			    </div>
 			</div>
-		</div>
-	</div>
+		</li>
+		<!--<li class="animate-repeat" *ngIf="results.length == 0">
+			<strong>No results found...</strong>
+		</li>-->
+	</ul>
 </div>
