--- a/src/app/app/basic-call-procedure/components/detail-retailer.component.html
+++ b/src/app/app/basic-call-procedure/components/detail-retailer.component.html
@@ -2,7 +2,13 @@
         <div class="item-container">
             <div class="container">
                 <div class='cell'>
-                    <div class='container'><div class='cell single title bold'>Gloria Cell</div></div>
+                    <div class='container'><div class='cell left title bold'>{{vSelectedRetail.retailer_name}}</div></div>
+                </div>
+                <div class='cell'>
+                    <div class='container'>
+                        <div class='cell right bold deep-cyan' *ngIf="vSelectedRetailSeq"># Route {{vSelectedRetailSeq}}</div>
+                        <div class='cell right' *ngIf="!vSelectedRetailSeq"></div>
+                    </div>
                 </div>
                 <div class='cell icon'></div>
             </div>
@@ -11,7 +17,7 @@
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Retailer Owner</div></div>
-                    <div class='container'><div class='cell single'>Ms. Gloria</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.owner_first_name}}</div></div>
                 </div>
                 <div class='cell icon arrow-down' [ngClass]="{selected: vSubMenuShow}"></div>
             </div>
@@ -21,28 +27,28 @@
             <div class="container border">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Civil Status</div></div>
-                    <div class='container'><div class='cell single'>Single</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.civil_status}}</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
             <div class="container border">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Email Address</div></div>
-                    <div class='container'><div class='cell single'>gloria@yahoo.com</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.email}}</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
             <div class="container border">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Gender</div></div>
-                    <div class='container'><div class='cell single'>Female</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.gender}}</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>BOD</div></div>
-                    <div class='container'><div class='cell single'>12 June 1999</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.birthday | date:'dd MMMM yyyy'}}</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
@@ -52,8 +58,8 @@
         <div class="item-container">
             <div class="container">
                 <div class='cell'>
-                    <div class='container'><div class='cell single grey'>Mobile Number</div></div>
-                    <div class='container'><div class='cell single'>2345</div></div>
+                    <div class='container'><div class='cell single grey'>Mobile Number (MIN)</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.retailer_min}}</div></div>
                 </div>
                 <a href="tel:1234566" class='cell icon call'></a>
             </div>
@@ -62,7 +68,7 @@
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Address</div></div>
-                    <div class='container'><div class='cell single'>Barangka</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.retailer_address}}</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
@@ -71,16 +77,16 @@
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Amount Receivable</div></div>
-                    <div class='container'><div class='cell single'>Barangka</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.amount_receivable | number}} ₱</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
-        </div>
+        </div>        
         <div class="item-container">
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Value Segment</div></div>
-                    <div class='container'><div class='cell single'>Barangka</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.value_segment}}</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
@@ -89,66 +95,18 @@
             <div class="container">
                 <div class='cell'>
                     <div class='container'><div class='cell single grey'>Threshold</div></div>
-                    <div class='container'><div class='cell single'>Barangka</div></div>
+                    <div class='container'><div class='cell single'>{{vSelectedRetail.threshold | number }} ₱</div></div>
                 </div>
                 <div class='cell icon'></div>
             </div>
         </div>
-
-        <!--<div class="item-container">
-            <div class="item-identifier">
-                <div class="item-title"><div *ngIf="getRetailerAll()">{{getRetailerAll().storeName}}</div></div>
-            </div>
-        </div>
         <div class="item-container">
-            <div class="item-identifier">Retailer Owner</div>
-            <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().ownerName}}</div></div>
-            <a (click)="subMenuShow()"><div class="item-icon arrow-down" [ngClass] = "{selected: vArrowMap}"></div></a>
-
-         <div *ngIf="vMenuShow">
-            <div class="item-sub-container">
-               <div class="item-identifier">Civil Status</div>
-                <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().serviceNumber}}</div></div>
-            </div>
-             <div class="item-sub-container">
-               <div class="item-identifier">Email</div>
-                <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().email}}</div></div>
-            </div>
-             <div class="item-sub-container">
-               <div class="item-identifier">Gender</div>
-                <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().gender}}</div></div>
-            </div>
-             <div class="item-sub-container">
-               <div class="item-identifier">Birthday</div>
-                <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().birthday}}</div></div>
+            <div class="container" (click)='goToInventoryRetailer(1)'>
+                <div class='cell'>
+                    <div class='container'><div class='cell single grey'>Inventory</div></div>
+                </div>
+                <div class='cell icon arrow-right'></div>
             </div>
         </div>
 
-        </div>
-        <div class="item-container" >
-            <div class="item-identifier">Mobile Number</div>
-            <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().serviceNumber}}</div></div>
-            <a href="tel:1234566"><div class="item-icon call"></div></a>
-        </div>
-        <div class="item-container" >
-            <div class="item-identifier">Address</div>
-            <div class="item-value"><div *ngIf="getRetailerAll()">{{getRetailerAll().storeAddress}}</div></div>
-        </div>
-        <div class="item-container" >
-            <div class="item-identifier">Amount Receivable</div>
-            <div class="item-value">100000</div>
-        </div>
-        <div class="item-container">
-            <div class="item-identifier">Retailer Load Wallet </div>
-            <div class="item-value"></div>
-        </div>
-        <div class="item-container">
-            <div class="item-identifier">Value</div>
-            <div class="item-value"></div>
-          
-        </div>
-        <div class="item-container">
-            <div class="item-identifier">Threshold</div>
-            <div class="item-value"></div>
-        </div>-->
     </div>
