--- a/src/app/app/my-transaction/components/retailer-route.component.html
+++ b/src/app/app/my-transaction/components/retailer-route.component.html
@@ -2,7 +2,7 @@
 	<div class="filter-container-ret-route" *ngIf="getFilter().filterRetailerRoute">
 		<div class="filter-label">Mission For: </div>
 		<div class="filter-dropdown">
-			<select [(ngModel)]="vSelectedDay" #val_day (change)="onChangeSelectDay(val_day.value)" >
+			<select id="filter-day" [(ngModel)]="vSelectedDay" #val_day (change)="onChangeSelectDay(val_day.value)" >
 				<option *ngFor="#each of vListDay" [value]="each.value">{{each.name}}</option>
 			</select>
 		</div>	
@@ -16,11 +16,12 @@
         </div>
     </div>
 	-->
-    <div class="item-container" *ngFor="#each of vListRetailers" (click)='gotoDetailRetailer(each.retailer_id)'>
+    <div class="item-container" *ngFor="#each of vListRetailers" (click)='goToDetailRetailer(each)' id='list-retailer'>
         <div class="container">
         	<div class='cell'>
         		<div class='container'>
-        			<div class='cell single bold deep-cyan'># Route {{each.route_sequence}}</div>
+        			<div class='cell single bold deep-cyan' *ngIf="each.route_sequence"># Route {{each.route_sequence}}</div>
+        			<div class='cell single bold deep-cyan' *ngIf="!each.route_sequence"></div>
         		</div>
 		        <div class='container'>
 	        		<div class='cell single bold'>{{each.retailer_name}}</div>
