--- a/src/app/app/basic-call-procedure/components/detail-retailer.component.html
+++ b/src/app/app/basic-call-procedure/components/detail-retailer.component.html
@@ -103,7 +103,7 @@
         <div class="item-container">
             <div class="container" (click)='goToInventoryRetailer(1)'>
                 <div class='cell'>
-                    <div class='container'><div class='cell single grey'>Inventory</div></div>
+                    <div class='container'><div class='cell single-large grey'>Inventory</div></div>
                 </div>
                 <div class='cell icon arrow-right'></div>
             </div>
