--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -155,6 +155,11 @@ LIST VIEW - TEXT
                 width: 85%;
                 padding-left:0.6em;
             }
+            &.single-large {
+                height:3.2em;
+                width: 85%;
+                padding-left:0.6em;
+            }
             &.icon {
                 width: 15%;
             }
