Change unit Pixel to EM

--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -33,7 +33,7 @@ $menu-underline : #ED135B;
 
 $inactive-tab-grey : #D9D9D9;
 
-// .html { font-size: 200%; } 
+//1 em = 16.13 px 
 //header
 $header-title : 1.2em;
 $header-tab : 16px;
