--- a/src/app/scss/_footer.scss
+++ b/src/app/scss/_footer.scss
@@ -1,11 +1,11 @@
 .footer-menu {
 width: 100%;
-height: 50px;
+height: 3.1em;
 display: block;
 background-color: $footer-background;
-z-index: 90;
+z-index: 100;
 position: fixed;
-bottom: -1px;
+bottom: 0em;
 //border-top: 1px solid #bcbac1;
   .column {
     width: 25%;
@@ -14,21 +14,21 @@ bottom: -1px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       .my-transaction {
         display: block;
-        height: 30px;
+        height: 1.8em;
         width: 100%;
-        margin-top: 2px;
+        margin-top: 0.1em;
         cursor: pointer;
         background: 
         url("../img/icon-idsp/startday-grey.png")
         no-repeat;
         background-position-x: center;
         background-position-y: center;
-        background-size: 25px;
+        background-size: 1.6em;
           &.active {
             background: url("../img/icon-idsp/my-transaction-turquoise.png") no-repeat;
             background-position-x: center;
             background-position-y: center;
-            background-size: 25px;
+            background-size: 1.6em;
           } 
       }
       .basic-procedure {
