--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'HelveticaNeue-Light';
   font-style: normal;
-  font-weight: normal;
+  font-weight: lighter;
   src: local('HelveticaNeue-Light'), url('../fonts/HelveticaNeue-Light.ttf') format('truetype');
 }
 
@@ -16,7 +16,6 @@ body{
 	background-color: #FFF;
 	margin: 0;
 	padding: 0;
-	font-size: 10.5pt;
 	height: 100%;
 	width: 100%;
 	// overflow: hidden;
