--- a/src/app/app/my-transaction/components/accounts-receivables.component.html
+++ b/src/app/app/my-transaction/components/accounts-receivables.component.html
@@ -1,6 +1,7 @@
 <div class="accounts-receivables">	
 	<div class="filter-container" *ngIf="getFilter().filterAccReceivables">
-		<div class="filter-input input">	
+		<div class="filter-input input">
+			<div class="icon"></div>
 			<input type="text" #listFilter (keyup)="onKey(listFilter.value)" id="RetailerSearchBox" placeholder="Input Retailer Name or MIN" />
 		</div>	
 	</div>
@@ -15,13 +16,13 @@
 	</div>
 
 	<ul class="animate-container">
-		<li class="animate-repeat" *ngFor="#FilteredSearch of vSearchedList">
+		<li class="animate-repeat" ng-animate="'animate'" *ngFor="#FilteredSearch of vSearchedList" >
 			<div class="item-container">
 			    <div class="container">
 			        <div class='cell'>
 		                <div class='container'><div class='cell left grey'># Route {{FilteredSearch.routeID}}</div></div>
 		                <div class='container'><div class='cell left'>{{FilteredSearch.retailerName}}</div></div>
-		                <div class='container'><div class='cell left italic'>{{FilteredSearch.retailerID}}</div></div>
+		                <div class='container'><div class='cell left italic'>{{FilteredSearch.MIN}}</div></div>
 			        </div>
 			        <div class='cell'>
 		                <div class='container'><div class='cell right'></div></div>
@@ -32,8 +33,5 @@
 			    </div>
 			</div>
 		</li>
-		<!--<li class="animate-repeat" *ngIf="results.length == 0">
-			<strong>No results found...</strong>
-		</li>-->
 	</ul>
 </div>
