--- a/src/app/scss/_accounts-receivables.scss
+++ b/src/app/scss/_accounts-receivables.scss
@@ -17,6 +17,8 @@
         .filter-input{
             padding-top: 7px;
             padding-left: 24px;
+            top: 0;
+            
             input {
                 background: $white;
                 height: 30px;
@@ -28,112 +30,123 @@
                 font-size: $filter-select;
                 font-weight:lighter;
                 appearance: none;
+                cursor: pointer;
+            }
+            .icon{
+                width:80px;
+                height:35px;
+                position: fixed;
+                right: 0;
+                z-index: 1200;
+                background: url("../img/icon-idsp/search-black.png") no-repeat;
+                background-size: 25px;
+                background-position: center center;
+
             }
         }
     }
 
-    .container-body{
-        background-color: white;
+    .animate-container{
+        display: block;
+        overflow: hidden;
+
+        .animate-repeat.ng-enter{
+            -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            position: relative;
+            display: block;
+        }
+        .animate-repeat.ng-enter-active{
+            opacity: 1;
+            top: 0;
+            height: 30px;
+        }
+        .animate-repeat.ng-leave{
+            -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            position: relative;
+            display: block;
+        }
+        .animate-repeat.ng-leave-active{
+            opacity: 0;
+            top: -50px;
+            height: 0px;
+        }
+
+        .item-container {
         width: 100%;
-        height: 100%;
-        
-        .animate-container {
-          background:white;
-          border:1px solid black;
-          list-style:none;
-          margin:0;
-          padding:0 10px;
-        
-            .animate-repeat {
-              line-height:30px;
-              list-style:none;
-              box-sizing:border-box;
+        border-bottom: 1px solid $border-line;
+        cursor: pointer;
 
-                  .item-container {
-                    display: inline-block;
-                    width: calc(100% - 20px);
-                    padding-left: 10px;
-                    padding-right: 10px;
-                    border-bottom: 1px solid #BFBFBF;
-                    cursor: pointer;
+            &.sub {
+                background-color: $whisper;
+            }
 
-                    .item-icon {
-                        height: 30px;
-                        width: 30px;
-                        float: right;
-                        color: #000;
-                        font-size: 17px;
-                        text-align: center;
-                        &.open-sub-item {
-                            background: url("../img/icon-idsp/path-right-grey.png")no-repeat;
-                            background-position-x: center;
-                            background-position-y: 7px;
-                            background-size: 13px;
-                        }
-                        &.selected
-                        {
-                            transform: rotate(180deg);
-                        }
+            .container {
+                display: table;
+                width: 100%;
 
-                    }
+                &.border {
+                    border-bottom: 1px solid $border-line;
+                }
+            }
+            .cell {
+                display:table-cell;
+                font-size: $content-normal;
+                height:1.6em;
+                vertical-align:middle;
 
-                    .item-title {
-                        position: center center;
-                    }
-                    
-                    .item-identifier {
-                        color: #7F7F7F;
-                        font-size: 18px;
-                        margin-right: 10px;
-                        margin-top: 10px;
-                        &.single-line {
-                            width: 125px;
-                            float: left;
-                        }
-                        &:after {
-                            clear: both;
-                        }
-                        .item-header{
-                            font-size: 20px;
-                            font-weight: 500;
-                            margin-bottom: 5px;
-                            color: #A8A8A8;               
-                        }
-                        .item-body{
-                             .float-right{
-                                float: right;
-                                font-size: 18px;
-                                margin-right: 20px;
-                                position: center;
-                            }
-                            .float-left{
-                                float: left;
-                            }
-                        }
-                    }
+                &.left {
+                    width: 45%;
+                    padding-left:0.6em;
+                }
+                &.right {
+                    width: 40%;
+                    text-align: right;
+                }
+                &.single {
+                    width: 85%;
+                    padding-left:0.6em;
+                }
+                &.icon {
+                    width: 15%;
+                }
+
+                &.bold {
+                    font-weight: bold;
+                }
+                &.italic {
+                    font-style: italic;
+                }
+                &.center {
+                    text-align: center;
+                }
+
+                &.grey {
+                    color: $grey;
+                }
+                &.deep-cyan {
+                    color: $deep-cyan;
+                }
+
+                &.sub-cell {
+                    padding-left:2em;
+                }
+                &.title {
+                    font-size: 1.2em;
+                    height:2.5em;
                 }
             }
         }
 
-        .animate-repeat.ng-move,
-        .animate-repeat.ng-enter,
-        .animate-repeat.ng-leave {
-          transition:all linear 0.5s;
-        }
-
-        .animate-repeat.ng-leave.ng-leave-active,
-        .animate-repeat.ng-move,
-        .animate-repeat.ng-enter {
-          opacity:0;
-          max-height:0;
-        }
-
-        .animate-repeat.ng-leave,
-        .animate-repeat.ng-move.ng-move-active,
-        .animate-repeat.ng-enter.ng-enter-active {
-          opacity:1;
-          max-height:30px;
-        }
     }
+
+
 
 }
