--- a/src/app/index.html
+++ b/src/app/index.html
@@ -26,7 +26,7 @@
 	    <script src="scripts/fastclick.js"></script>    
 	    <script src="scripts/nouislider.js"></script>
 	</head>
-	<body style="margin: 0px" onload="onLoad()">
+	<body style="margin: 0px">
 		<idsp-app>
 			<div id="splash" class="backgroundImage">
 	            <div class="picture"></div>
