updated targets actuals

--- a/src/app/app/my-transaction/components/targets-actuals.component.html
+++ b/src/app/app/my-transaction/components/targets-actuals.component.html
@@ -16,9 +16,9 @@
 	</div>
 
 	<div *ngIf="vDayShow" >
-		<div class="item-container-ta" id="ta-container" *ngFor="#each of getProdCat()">
+		<div class="item-container-ta" id="ta-container" *ngFor="#each of getProduct()">
 			<div class="item-title-ta">{{each.category_name}} </div>
-				<div class="item-left" *ngFor="#prodSubCat of getProdSubCat()">{{prodSubCat.sub_category_name}}</div>
+				<div class="item-left">{{each.sub_category_name}}</div>
 				<div class="item-mid">23.33%</div>
 				<div class="item-right">
 					25/150
@@ -30,7 +30,7 @@
 	</div>
 
 	<div *ngIf="vWeekShow">
-		<div class="item-container-ta" id="ta-container" *ngFor="#each of getProdCat()">
+		<div class="item-container-ta" id="ta-container" *ngFor="#each of getProduct()">
 			<div class="item-title-ta">{{each.category_name}}</div>
 				<div class="item-left">SIM</div>
 				<div class="item-mid">23.33%</div>
@@ -43,7 +43,7 @@
 	</div>
 
 	<div *ngIf="vMonthShow">
-		<div class="item-container-ta" id="ta-container" *ngFor="#each of getProdCat()">
+		<div class="item-container-ta" id="ta-container" *ngFor="#each of getProduct()">
 			<div class="item-title-ta">{{each.category_name}}</div>
 				<div class="item-left">SIM</div>
 				<div class="item-mid">23.33%</div>
