Add Hamburger Button

--- a/src/app/scss/_left-menu.scss
+++ b/src/app/scss/_left-menu.scss
@@ -51,7 +51,7 @@
             padding-left: 10px;
             padding-right: 10px;
             width: calc( 100% - 20px );
-            background-color: $smartgreen;
+            background-color: $grey;
             .menuPic{
                 display: inline-block;
                 width: 70px;
@@ -138,7 +138,7 @@
             .itemCategory{
                 float: left;
                 width: calc(100% - 10px);
-                color: $smartgreen;
+                color: $grey;
                 background-color: #EEE;
                 padding-left: 10px;
                 cursor:pointer;
