--- a/src/app/scss/_header.scss
+++ b/src/app/scss/_header.scss
@@ -25,6 +25,11 @@
           position: fixed;
           z-index:1000;
           cursor: pointer;
+          &.hamburger{
+            background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABhQTFRFAAAA%2F%2F%2F%2FAAAAAAAAAAAAAAAAAAAA%2F%2F%2F%2FeQ7W7QAAAAd0Uk5TAAAIGCBIYL3mPFwAAAA%2FSURBVChTYxBEAwx0ElAvRwKKQAFzZAFDoIBpGgKkggSUXRDAGaSFARkwYhVghFoogEuATu7AEKCFO9AANQQAPu5OcaM2uDkAAAAASUVORK5CYII%3D) center center no-repeat;
+            background-size: 1.6em;
+            background-position: center center;
+          }
           &.back{
             background: url("../img/icon-idsp/back-white.png") no-repeat;
             background-size: 1.6em;
