--- a/src/app/scss/_global-parameter.scss
+++ b/src/app/scss/_global-parameter.scss
@@ -3,6 +3,7 @@ $smart-menu-color : #007879;
 $red : #FF0000;
 
 //all-background
+$apple : #62BB47;
 $white : #FFF;
 $footer-background:#F5f5f5;
 //no-divider-button, double-divider-button
