Minor Update on Hamburger Button Function

--- a/src/app/app/shared/components/left-menu.component.html
+++ b/src/app/app/shared/components/left-menu.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class='cell icon arrow-right'></div>
         </div>
-            <div class="container" (click)="goToMyTargets()">
+            <div class="container" (click)="goToTargets()">
                 <div class='cell icon call'></div>
                 <div class='cell'>
                     <div class='container'><div class='cell single'>Targets &amp; Actuals</div></div>
