hamburger backend done

--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -89,7 +89,7 @@
 		</div>
 	</div>
 
-	<div *ngIf="vLoadShow && isProductListLoaded()">
+	<div *ngIf="vLoadShow">
 		<div class="item-container-i">
 			<div class="item-notification">LOAD AS OF 04/12/2016 10.00 AM</div>
 		</div>
