--- a/src/app/scss/_targets-actuals.scss
+++ b/src/app/scss/_targets-actuals.scss
@@ -31,9 +31,10 @@
         padding-bottom: 10px;
         
         .item-title-ta{   
-            font-size: 20px;
-            background-color: $azure-white;
+           font-size: 20px;
+            /* background-color: #DCE6F2; */
             padding-left: 2%;
+            color: green;
         }
 
         .item-left{
