--- a/src/app/scss/_left-menu.scss
+++ b/src/app/scss/_left-menu.scss
@@ -39,85 +39,41 @@
         padding-bottom: 10px;
         color: $white;
         display: inline-block;
-        padding-left: 10px;
-        padding-right: 10px;
-        width: calc( 100% - 20px );
+        padding-left: 12px;
+        padding-right: 12px;
+        width: calc(100% - 20px);
         background-color: $apple;
-        .menu-pic{
-            display: inline-block;
-            width: 70px;
-            height: 70px;
-            //background-color: $smartred;
-            background: url(../img/profpic.jpg) no-repeat;
-            background-size: cover;
-            background-position: center center;
-            border: 1px solid $white;
-            border-radius: 35px;
-            /*justify-content: center;
-            align-items: center;*/
-            -webkit-transform: translateZ(0);
-            -webkit-backface-visibility: hidden;
-        }
-        .menu-header-text{
-            
-            float: right;
-            text-align: right;  
-            color: $white;
-            width: 140px;
-            //margin-right: 10px;
-            padding-bottom: 10px;
-            
-            .smart-pic{
-                display: inline-block;
-                width: 150px;
-                
-                .picture{
-                    width: 70px;
-                    height: 30px;
-                    background: url(../img/smartblacklogo.png) no-repeat;
-                    background-position: center center;
-                    background-size: 70px;
-                    float: left;
-                }
-                
-                .text{
-                    color: $white;
-                    font-size: 15px;
-                    float: left;
-                    margin-top: 11px;
-                }
-                
-            }
-            
-            .smart-point{
-                display: inline-block;
-                font-size: 25px;
-                margin-right: 15px;
-                margin-top: 10px;
-                span{
-                    font-size: 12px;
-                }
-            }
-        }
-        
-        .expiry{
-            display: inline-block;
-            width: calc(100% - 15px);
-            margin-right: 15px;
-            text-align: right;
-            font-size: 11px;
-            margin-bottom: 5px;
-        }
-        
-        .phone-number{
-            display: inline-block;
+        .header-container {
+            display: table;
             width: 100%;
-            background-color: black;
-            color: $white;
-            border: 1px solid $white;
-            line-height: 30px;
-            height: 30px;
-            padding-left: 10px;
+            padding-top: 0.2em;
+            padding-bottom: 0.2em;
+        }
+        .header-cell{
+            display:table-cell;
+            font-size: $content-normal;
+            height:70px;
+            vertical-align:middle;
+            &.pic{
+                width: 75px;
+                background: url(../img/profpic.jpg) no-repeat;
+                background-size: cover;
+                background-position: center center;
+                border: 1px solid $white;
+                border-radius: 100%;
+                /*justify-content: center;
+                align-items: center;*/
+                -webkit-transform: translateZ(0);
+                -webkit-backface-visibility: hidden;    
+            }
+            &.text{  
+                color: $white;
+                width: 75%;
+                font-size: 1.2em;
+                text-align: center;
+                padding-left: 5px;
+                padding-right: 5px;
+            }
         }
     }
     
@@ -125,13 +81,14 @@
         
         display: inline-block;
         width: 100%;
-
+        .separator{
+            border-bottom: 1px solid $white-smoke;        
+        }
         .container {
             display: table;
             width: 100%;
             padding-top: 0.2em;
             padding-bottom: 0.2em;
-
         }
         .cell {
             display:table-cell;
