--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -184,6 +184,9 @@ LIST VIEW - TEXT
                 font-size: 1.2em;
                 height:2.5em;
             }
+            &.header {
+                width: 100%;
+            }
 
 
 /*
